# Ai_management_frontend

./: Pipfile  access_token.json  dashboard.ui  dashboard_view.py  labelImg.py  login.py  login.ui  login_screen.py  pyproject.toml  request.py  resources.qrc  test.py  thread_worker.py  ui_dashboard.py  widget.py  zipf.py
frames_collection/: dashboard.py
uifiles/: dashboard.ui  login.ui  login_dialog.ui  login_screen.ui  scrollbox.ui  widget.ui
