[tool.poetry]
name = "ai_management_frontend"
version = "0.1.0"
description = ""
authors = ["Prabal Pathak <prabal01pathak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyQt5 = "^5.15.7"
requests = "^2.28.0"
lxml = "^4.9.0"
QT-PyQt-PySide-Custom-Widgets = "^0.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
